// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProgressTracker Snapshots linear 1`] = `
.c6 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  padding: var(--spacing-2x) 0;
  position: relative;
  width: 100%;
}

.c1 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  counter-reset: step;
  display: grid;
  grid-auto-columns: unset;
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fit,minmax(1rem,1fr));
  margin: 0;
  padding: 0;
}

.c5 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  margin-top: var(--spacing-half);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-weight: var(--font-normal);
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: relative;
  text-align: center;
}

.c2::before {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 0.125rem solid;
  border-radius: 50%;
  box-sizing: border-box;
  color: #1b1c1e;
  content: counter(step);
  counter-increment: step;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  height: var(--size-1halfx);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 auto 0.25rem;
  text-align: center;
  width: var(--size-1halfx);
}

.c2::after {
  background-color: #DBDEE1;
  content: '';
  height: 0.25rem;
  left: calc(-50% - 0.5rem);
  position: absolute;
  top: 0.625rem;
  width: 100%;
  z-index: -1;
}

.c2:first-child::after {
  content: none;
}

.c3::before {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
  font-weight: var(--font-semi-bold);
}

.c3::after {
  background-color: #006296;
}

.c3 .c4 {
  color: #006296;
}

.c7::before {
  border-color: #006296;
  border-width: 0.25rem;
  color: #003A5A;
  font-weight: var(--font-semi-bold);
  height: var(--size-2x);
  margin: -0.25rem auto 0;
  width: var(--size-2x);
}

.c7::after {
  background-color: #006296;
}

.c7 .c4 {
  color: #003A5A;
  font-weight: var(--font-semi-bold);
}

.c8::before {
  border-color: #B7BBC2;
  color: #1B1C1E;
}

.c8 .c4 {
  color: #60666E;
}

<section
  class="c0"
>
  <ol
    class="c1"
    data-testid="progress-tracker"
  >
    <li
      class="c2 c3"
      data-testid="progress-tracker-step-completed"
    >
      <span
        class="c4 c5"
        data-testid="progress-tracker-label"
      >
        Step 1
      </span>
      <span
        class="c6"
      >
        completed
      </span>
    </li>
    <li
      aria-current="step"
      class="c2 c7"
      data-testid="progress-tracker-step-current"
    >
      <span
        class="c4 c5"
        data-testid="progress-tracker-label"
      >
        Step 2
      </span>
    </li>
    <li
      class="c2 c8"
      data-testid="progress-tracker-step-uncompleted"
    >
      <span
        class="c4 c5"
        data-testid="progress-tracker-label"
      >
        Step 3
      </span>
      <span
        class="c6"
      >
        not completed
      </span>
    </li>
  </ol>
</section>
`;

exports[`ProgressTracker Snapshots non linear 1`] = `
.c6 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  padding: var(--spacing-2x) 0;
  position: relative;
  width: 100%;
}

.c1 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  counter-reset: step;
  display: grid;
  grid-auto-columns: unset;
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fit,minmax(1rem,1fr));
  margin: 0;
  padding: 0;
}

.c5 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  margin-top: var(--spacing-half);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-weight: var(--font-normal);
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: relative;
  text-align: center;
}

.c2::before {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 0.125rem solid;
  border-radius: 50%;
  box-sizing: border-box;
  color: #1b1c1e;
  content: counter(step);
  counter-increment: step;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  height: var(--size-1halfx);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 auto 0.25rem;
  text-align: center;
  width: var(--size-1halfx);
}

.c2::after {
  background-color: #DBDEE1;
  content: '';
  height: 0.25rem;
  left: calc(-50% - 0.5rem);
  position: absolute;
  top: 0.625rem;
  width: 100%;
  z-index: -1;
}

.c2:first-child::after {
  content: none;
}

.c3::before {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
  font-weight: var(--font-semi-bold);
}

.c3 .c4 {
  color: #006296;
}

.c9::before {
  border-color: #006296;
  border-width: 0.25rem;
  color: #003A5A;
  font-weight: var(--font-semi-bold);
  height: var(--size-2x);
  margin: -0.25rem auto 0;
  width: var(--size-2x);
}

.c9 .c4 {
  color: #003A5A;
  font-weight: var(--font-semi-bold);
}

.c7::before {
  border-color: #B7BBC2;
  color: #1B1C1E;
}

.c7 .c4 {
  color: #60666E;
}

.c8 {
  color: #FFFFFF;
  fill: #CD2C23;
  left: calc(50% + 0.25rem);
  position: absolute;
  top: -0.5rem;
}

<section
  class="c0"
>
  <ol
    class="c1"
    data-testid="progress-tracker"
  >
    <li
      class="c2 c3"
      data-testid="progress-tracker-step-completed"
    >
      <span
        class="c4 c5"
        data-testid="progress-tracker-label"
      >
        Step 1
      </span>
      <span
        class="c6"
      >
        completed
      </span>
    </li>
    <li
      class="c2 c7"
      data-testid="progress-tracker-step-uncompleted"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert c8"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <span
        class="c4 c5"
        data-testid="progress-tracker-label"
      >
        Step 2
      </span>
      <span
        class="c6"
      >
        not completed
      </span>
    </li>
    <li
      aria-current="step"
      class="c2 c9"
      data-testid="progress-tracker-step-current"
    >
      <span
        class="c4 c5"
        data-testid="progress-tracker-label"
      >
        Step 3
      </span>
    </li>
    <li
      class="c2 c7"
      data-testid="progress-tracker-step-uncompleted"
    >
      <span
        class="c4 c5"
        data-testid="progress-tracker-label"
      >
        Step 4
      </span>
      <span
        class="c6"
      >
        not completed
      </span>
    </li>
  </ol>
</section>
`;
